<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" android:layout_width="match_parent">
    <item android:id="@+id/connect_menu"
        android:title="@string/connect"
        apps:showAsAction="always"/>

    <item android:id="@+id/about_menu"
        android:title="@string/about"
        apps:showAsAction="never"/>
    <item android:id="@+id/remote_menu"
        android:title="@string/remote"
        apps:showAsAction="never"/>
    <item android:id="@+id/oled_menu"
        android:title="@string/oled"
        apps:showAsAction="never"/>
    <item android:id="@+id/uart_menu"
        android:title="@string/uart_show"
        apps:showAsAction="never"/>
    <item android:id="@+id/all_menu"
        android:title="所有"
        apps:showAsAction="never"/>
</menu>