<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_weight="10"
        android:id="@+id/tv_uart_mega"
        android:gravity="left"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/pause"
            android:id="@+id/btn_pause"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlack"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/cleanup"
            android:id="@+id/btn_clean"
            android:layout_gravity="center"
            android:background="@color/colorWhite"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/close"
            android:id="@+id/btn_close"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlack"/>
    </LinearLayout>
</LinearLayout>