<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="top"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_below="@+id/camera_find_color">
            <Button
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorDarkYellow"
                android:textColor="@color/colorWhite"
                android:text="@string/sendd"
                android:id="@+id/btn_emoji_send"/>
            <Button
                android:gravity="center"
                android:background="@color/colorThemeYellow"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_binary"
                android:id="@+id/btn_emoji_oled_mode"/>

            <Button
                android:gravity="center"
                android:background="@color/colorDarkYellow"
                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="复制为文本"
                android:id="@+id/btn_emoji_text"/>

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:background="@drawable/textview_backgroud_line"
                android:text="@string/open_media_resource"
                android:id="@+id/tv_emoji_file_name"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:padding="3dp"
                android:background="@drawable/button_border"
                android:text="@string/open_file"
                android:id="@+id/btn_emoji_file"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_weight="10"
            android:layout_height="0dp"
            android:id="@+id/iv_emoji_photo"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/decode_state"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:id="@+id/tv_emoji_decode"
                android:gravity="center|bottom"/>
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>