<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@color/colorDarkYellow"
                    android:id="@+id/spinner_gcode"></Spinner>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:id="@+id/btn_var_begin"
                    android:background="@color/colorLightYellow"
                    android:textColor="@color/colorWhite"
                    android:text="begin"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:id="@+id/btn_var_end"
                    android:background="@color/colorDarkYellow"
                    android:textColor="@color/colorWhite"
                    android:text="end"
                    />

                <EditText
                    android:id="@+id/edit_var_num"
                    android:layout_gravity="left"
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorLightYellow"
                    android:textColor="@color/colorWhite"
                    android:layout_weight="3"
                    android:text="0"
                    android:inputType="number|numberDecimal"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/btn_gcode_insert"
                    android:background="@color/colorDarkYellow"
                    android:textColor="@color/colorWhite"
                    android:text="插"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_gcode_delet"
                    android:background="@color/colorLightYellow"
                    android:textColor="@color/colorWhite"
                    android:text="删"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="14">

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/list_view_teacher_gcode"
                            android:background="@color/colorWhite">

                            </ListView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            android:layout_weight="1">
                            <Space
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent" />
                            <Button
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:id="@+id/btn_teacher_up"
                                android:background="@color/colorWhite"
                                android:layout_margin="5dp"

                                android:text="上"/>
                            <Button
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:id="@+id/btn_teacher_forware"
                                android:background="@color/colorThemeYellow"
                                android:textColor="@color/colorWhite"
                                android:layout_margin="5dp"
                                android:text="前"/>
                            <Space
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent" />

                            <Button
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:id="@+id/btn_teacher_more"
                                android:background="@color/colorThemeYellow"
                                android:textColor="@color/colorWhite"
                                android:layout_margin="5dp"
                                android:text="："/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            android:layout_weight="1">
                            <Space
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent" />
                            <Button
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:id="@+id/btn_teacher_left"
                                android:background="@color/colorThemeYellow"
                                android:textColor="@color/colorWhite"
                                android:layout_margin="5dp"
                                android:text="左"/>
                            <Button
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:id="@+id/btn_teacher_select"
                                android:background="@color/colorWhite"
                                android:layout_margin="5dp"
                                android:text="O"/>
                            <Button
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:id="@+id/btn_teacher_right"
                                android:background="@color/colorThemeYellow"
                                android:textColor="@color/colorWhite"
                                android:layout_margin="5dp"
                                android:text="右"/>
                            <Space
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            android:layout_weight="1">
                            <Space
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:layout_height="match_parent" />
                            <Space
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent" />
                            <Button
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:id="@+id/btn_teacher_backware"
                                android:background="@color/colorThemeYellow"
                                android:textColor="@color/colorWhite"
                                android:layout_margin="5dp"
                                android:text="后"/>
                            <Button
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent"
                                android:id="@+id/btn_teacher_down"
                                android:background="@color/colorWhite"
                                android:layout_margin="5dp"
                                android:text="下"/>
                            <Space
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7"
                        android:id="@+id/tv_teacher_show"
                        android:background="@color/colorDarkWhite"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/btn_gcode_step"
                        android:background="@color/colorWhite"
                        android:text="@string/single_step"/>

                    <Button
                        android:id="@+id/btn_gcode_run"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/colorWhite"
                        android:text="@string/gcode_auto_run" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/btn_back_to_zero"
                        android:background="@color/colorWhite"
                        android:text="@string/back_to_zero"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:id="@+id/btn_emergency_stop"
                        android:background="@color/colorRed"
                        android:text="@string/emergency_stop"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>



</FrameLayout>
